--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -12,6 +13,8 @@
             <ul>
                 <li> <a href="#">Gmail</a></li>
                 <li> <a href="#">Images</a></li>
+                <li> <a href="#"><img src="bars.png"></a></li>
+                <li><button>Sign In</button></li>
                 
             </ul>
         </header>
