--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
                 
             </ul>
         </header>
+        <div class="main">
+            <img src="google.png" alt="Google">
+            <div class="searchbox">
+                <input type="text" class="search">
+                <div class="icons">
+                    <div> <img src="search.png"> </div>
+                    <div> <img src="mic.png"> </div>
+                </div>
+            </div>
+
+            <div class="buttons">
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky</button>
+            </div>
+            <div class="lang">
+                <p>Google offered in: <a href="#">हिन्दी</a> <a href="#">বাংলা</a> <a href="#">తెలుగు</a> <a href="#">मराठी</a> <a href="#">தமிழ்</a> <a href="#">ગુજરાતી</a> <a href="#">ಕನ್ನಡ</a> <a href="#">മലയാളം</a> <a href="#">ਪੰਜਾਬੀ</a></p>
+            </div>
+        </div>
     </section>
 
 </body>
