--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button>I'm Feeling Lucky</button>
             </div>
             <div class="lang">
-                <p>Google offered in: <a href="#">हिन्दी</a> <a href="#">বাংলা</a> <a href="#">తెలుగు</a> <a href="#">मराठी</a> <a href="#">தமிழ்</a> <a href="#">ગુજરાતી</a> <a href="#">ಕನ್ನಡ</a> <a href="#">മലയാളം</a> <a href="#">ਪੰਜਾਬੀ</a></p>
+                <p>Google offered in: <a href="#">हिन्दी</a> <a href="#">বাংলা</a></p>
             </div>
         </div>
         <div class="footer">
